tests/cases/compiler/importWithTrailingSlash_noResolve/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.2/tests/cases/compiler/importWithTrailingSlash_noResolve.ts`, Apache-2.0 License

import foo from "./foo/";
//~^ ERROR: Cannot find module './foo/' or its corresponding type declarations.